--- a/style3.css
+++ b/style3.css
@@ -3,11 +3,16 @@
     max-width: 470px;
     background: linear-gradient(135deg, #00feba, #5b548a);
     color: #fff;
-    margin: 100px auto 0;
+    margin: 0px auto 0;
     border-radius: 20px;
     padding: 40px 35px;
     text-align: center;
 
+}
+.card:hover{
+    box-shadow: 0px 0px 30px #5b548a;
+    transition: 0.3s;
+    transform: scale(1.01);
 }
 .search{
     width: 100%;
@@ -20,21 +25,31 @@
     outline: 0;
     background: #ebfffc;
     color: #555;
-    padding: 10px 25px;
+    padding: 5px 25px;
     height: 60px;
-    border-radius: 30px;
+    border-radius: 15px;
     flex: 1;
     margin-right: 16px;
     font-size: 18px;
 }
+.search input:hover{
+    box-shadow: 0px 0px 30px rgb(255, 255, 255);
+    transition: 0.3s;
+    transform: scale(1.01);
+}
 .search button{
-    order: 0;
+    border: 0;
     outline: 0;
     background: #ebfffc;
     border-radius: 50%;
-    width: 60px;
-    height: 60px;
+    width: 65px;
+    height: 65px;
     cursor: pointer;
+}
+.search button:hover{
+     box-shadow: 0px 0px 30px rgb(255, 255, 255);
+    transition: 0.3s;
+    transform: scale(1.01);
 }
 .search button img{
     width: 16px;
@@ -46,6 +61,7 @@
 .weather h1{
     font-size: 80px;
     font-weight: 500;
+    margin: 0px;
 }
 .weather h2{
     font-size: 45px;
@@ -82,4 +98,30 @@
     font-size: 20px;
     margin-top: 10px;
     display: none;
+}
+.navbar{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.links a{
+    margin: auto 30px;
+    
+}
+.textalign{
+    text-align: center;
+    font-size: 40px;
+    margin: 0px;
+}
+.tb1{
+    font-family: Arial, Helvetica, sans-serif;
+}
+a{
+    text-decoration: none;
+    color: black;
+    font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+@media (max-width: 568px){
+    
 }
