--- a/style3.css
+++ b/style3.css
@@ -123,5 +123,19 @@ a{
     font-family: Arial, Helvetica, sans-serif;
 }
 @media (max-width: 568px){
-    
+    .card{
+    width: 90%;
+    max-width: auto;
+    background: linear-gradient(135deg, #00feba, #5b548a);
+    color: #fff;
+    margin: 0px 10px;
+    border-radius: 20px;
+    padding: 40px 35px;
+    text-align: center;
+    }
+    .search button{
+         width: 60px;
+    height: 55px;
+    padding: 20px;
+    }
 }
