--- a/style3.css
+++ b/style3.css
@@ -14,6 +14,9 @@
     transition: 0.3s;
     transform: scale(1.01);
 }
+body{
+    margin: 0px;
+}
 .search{
     width: 100%;
     display: flex;
@@ -104,6 +107,7 @@
     justify-content: space-between;
     align-items: center;
 }
+
 .links a{
     margin: auto 30px;
     
@@ -128,14 +132,18 @@ a{
     max-width: auto;
     background: linear-gradient(135deg, #00feba, #5b548a);
     color: #fff;
-    margin: 0px 10px;
+    margin: 0px 0px;
     border-radius: 20px;
     padding: 40px 35px;
     text-align: center;
+    }
+    body{
+        width: fit-content;
     }
     .search button{
          width: 60px;
     height: 55px;
     padding: 20px;
     }
+    
 }
